--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "udacity.louco.com.radio"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.1"
+        versionCode 2
+        versionName "0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "NameBase", "\"radio_list\""
 
@@ -17,7 +17,7 @@ android {
     signingConfigs {
         // More code
         myConfig {
-            storeFile file("$rootDir/app/Untitled")
+            storeFile file("$rootDir/app/RRockKey")
             storePassword 'Mixalich2'
             keyAlias 'LoucoKey'
             keyPassword 'Mixalich2'
